--- a/01-cv-portfolio/css/styles.css
+++ b/01-cv-portfolio/css/styles.css
@@ -92,7 +92,7 @@ b.max-bold{ font-weight: 700; }
 .margin-t-10{ margin-top: 10px; }
 
 .margin-b-30{ margin-bottom: 30px; }
-.margin-b-50{ margin-bottom: 50px; }
+.margin-b-50{ margin-bottom: 50px; text-align: justify;}
 
 .margin-tb-30{ margin-top: 30px; margin-bottom: 30px; }
 
@@ -123,7 +123,9 @@ header .downlad-btn{ padding: 15px 30px; border-radius: 4px; float: right; margi
 
 header .downlad-btn:hover{ -webkit-transform: translateY(-4px); transform: translateY(-4px); }
 
-
+header .downlad-btn_pyfwi{ padding: 15px 30px; border-radius: 4px; float: left; margin-top: 30px;
+	box-shadow: inset 0 0px 4px rgba(0,0,0,.3); background: #FFAD01; color: #fff; 
+	-webkit-transition: all .2s ease; transition: all .2s ease; }
 /* ---------------------------------
 4. INTRO SECTION
 --------------------------------- */
